[tool.poetry]
name = "dahlia"
version = "2.3.0"
description = "A library allowing you to use Minecraft format codes in strings."
authors = ["trag1c <trag1cdev@yahoo.com>"]
license = "MIT"
documentation = "https://dahlia.readthedocs.io/en/latest"
repository = "https://github.com/trag1c/Dahlia"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
dahlia = "dahlia.__main__:main"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
