[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dahlia"
version = "3.1.0"
description = "A library allowing you to use Minecraft format codes in strings."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "trag1c", email = "trag1cdev@yahoo.com" }
]
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "interrogate~=1.7",
    "mike>=2.1.1,<3",
    "mypy~=1.10",
    "pytest-cov~=5.0",
    "pytest>=8.2.1,<9",
    "ruff~=0.8.0",
    "mkdocs~=1.6",
    "mkdocs-material>=9.5.24,<10",
]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "if sys.version_info.*:", "if __name__ == \"__main__\":"]

[tool.interrogate]
exclude = ["tests"]
ignore-init-method = true
ignore-semiprivate = true
ignore-private = true
ignore-module = true
ignore-magic = true
ignore-nested-functions = true
verbose = 1

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "FIX", "ANN401", "ISC001", "T201", "TD003", "PLR2004"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-returns = 8

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP", "FBT", "PLC2701", "S101", "SLF001"]
